platform/argocd/foundations/bad1c950-7468-49ea-a06e-ba0da2f19fce.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc358-qualification-rc360-disposable
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: bad1c950-7468-49ea-a06e-ba0da2f19fce
    kuberploy.io/foundation-contract: v2
    kuberploy.io/project-id: 32155cc1-0c9b-4f90-ad5d-0300c69258a6
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc358-qualification-rc360-disposable
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: bad1c950-7468-49ea-a06e-ba0da2f19fce
    kuberploy.io/foundation-contract: v2
    kuberploy.io/project-id: 32155cc1-0c9b-4f90-ad5d-0300c69258a6
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc358-qualification-rc360-disposable
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: bad1c950-7468-49ea-a06e-ba0da2f19fce
    kuberploy.io/foundation-contract: v2
    kuberploy.io/project-id: 32155cc1-0c9b-4f90-ad5d-0300c69258a6
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-rc358-qualification-rc360-disposable
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: bad1c950-7468-49ea-a06e-ba0da2f19fce
    kuberploy.io/foundation-contract: v2
    kuberploy.io/project-id: 32155cc1-0c9b-4f90-ad5d-0300c69258a6
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
